bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:2: error: '(' expected but identifier found.
  if negative return((-1)*a*b<0)
     ^